More test coverage.