@@ -81,6 +81,7 @@
 			--add-opens java.base/java.lang=ALL-UNNAMED
 			--add-opens java.base/java.lang.invoke=ALL-UNNAMED
 			--add-opens java.base/sun.reflect.annotation=ALL-UNNAMED
+			--add-exports java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
 		</morphixArgLine>
 	</properties>
 
